# zillow_scrapers

./: README.md  example.py  main.py  pyproject.toml
zillow_scrapers/: __init__.py  scraper.py
zillow_scrapers/js/: fingerprint.js
zillow_scrapers/typed_scraper/: agent_scraper.py
zillow_scrapers/utils/: driver_utils.py
