[project]
name = "zillow-scrapers"
version = "0.1.0"
description = ""
authors = [
    {name = "Hilmi",email = "root@hilmiazizi.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.50.0,<2.0.0)",
    "fake-useragent (>=2.0.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
